# redteaming

./: README.md
BOFKatz/: BOFKatz.c  BOFKatz.py  Readme.md  beacon.h  bofkatz.axs  definitions.h  makefile
C2-Tool-Collection/: README.md
C2-Tool-Collection/.claude/: settings.local.json
C2-Tool-Collection/Loaders/: README.md
GodPotatoBOF/: godpotato.axs  godpotato.axsZone.Identifier
Loaders/: Load-RemoteTool.ps1  README.md
RemoteLoader/: .gitignore  README.md
hostpayload/: 4laflc.cs  USAGE.md  adaptixpowerShell.py  payloader.py  requirements.txt
mcpray/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mcpray.py  pyproject.toml
mcpray/mcpray/: README.md  __init__.py  cli.py  client.py  findings.py  runner.py  scanner.py  scoring.py
mcpray/mcpray/ai/: __init__.py  client.py  functions.py  logger.py  payloads.py
mcpray/mcpray/interactive/: __init__.py  commands.py  repl.py  state.py
mcpray/mcpray/interactive/commands/: __init__.py  _shared.py  ai_cmd.py  attack.py  discover.py  explore.py  mcp_specific.py  output.py  protocol.py  scan.py  session.py
mcpray/mcpray/reporters/: __init__.py  html_reporter.py  json_reporter.py  nuclei_reporter.py  poc_generator.py  sarif_reporter.py
mcpray/mcpray/rules/: __init__.py  default_rules.json  loader.py
mcpray/mcpray/scanners/: __init__.py  active.py  attack_graph.py  auth.py  base.py  cmdinj.py  context_poison.py  cred_dump.py  dataflow.py  discovery.py  fuzzer.py  indirect_pi.py  mitm.py  prompts.py  resources.py  sqli.py  ssrf_exploit.py  tool_shadow.py  tools.py
(+51 files in other folders)
