[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcpray"
version = "1.0.0"
description = "MCP (Model Context Protocol) server security scanner"
readme = "mcpray/README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["security", "mcp", "scanner", "pentest"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.27",
    "fastmcp>=2.0",
]

[project.optional-dependencies]
repl = ["prompt-toolkit>=3.0"]
reports = ["pyyaml>=6.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.9",
]

[project.scripts]
mcpray = "mcpray.cli:main"

[project.urls]
Homepage = "https://github.com/hstn/mcpray"
Issues = "https://github.com/hstn/mcpray/issues"

[tool.hatch.build.targets.wheel]
packages = ["mcpray"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
